[tool.poetry]
name = "rubb"
version = "0.1.0"
description = "香川高専詫間・課題部門"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
