[tool.poetry]
authors = ["MATUMOTO Eugene <g23319@kagawa.kosen-ac.jp>"]
description = "香川高専詫間・課題部門"
license = "MIT"
name = "rubb"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.112.0"
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.5"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
